--- a/client/public/index.html
+++ b/client/public/index.html
@@ -6,7 +6,9 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app" />
+    <meta name="description"
+        content="Find The Freelance Services For Your Business. A Whole World Of Talent At Your Fingertips. Find Jobs suitable for your abilities in one place." />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
     <title>GLancer</title>
 </head>
